# claude-rss-news-digest

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cron.example  digest-template.html  digest.css  docker-compose.yml  entrypoint.sh  fetch_feeds.py  init_db.py  lefthook.yml  mcp_server.py  pyproject.toml  run-digest.sh  run.py  send_email.py  sources.json
.claude/commands/: news-digest-select.md  news-digest-write.md  news-digest.md
claude-config/commands/: news-digest.md
digest-server/: Cargo.toml  Dockerfile  Dockerfile.ci
digest-server/src/: main.rs
docs/: DEPLOYMENT.md
tests/: test_mcp_server.py  test_run.py
